C-Senitel-Web/analyzer_core/core/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADDRESS
    ATOMIC
    AUTO
    BNOT
    COMPLEX
    CONTINUE
    DEREF
    DO
    ENUM
    EXTERN
    GENERIC
    GOTO
    HASH
    IMAGINARY
    INLINE
    REGISTER
    RESTRICT
    STATIC
    STATIC_ASSERT
    THREAD_LOCAL
    UNION
    VOLATILE

Grammar

Rule 0     S' -> program
Rule 1     program -> external_list
Rule 2     empty -> <empty>
Rule 3     external_list -> external_list external_declaration
Rule 4     external_list -> external_declaration
Rule 5     external_declaration -> function_definition
Rule 6     external_declaration -> declaration
Rule 7     external_declaration -> include_directive
Rule 8     external_declaration -> PP_DIRECTIVE
Rule 9     external_declaration -> typedef_declaration
Rule 10    typedef_declaration -> TYPEDEF declaration
Rule 11    header_name -> IDENTIFIER
Rule 12    header_name -> IDENTIFIER DOT IDENTIFIER
Rule 13    include_directive -> PP_DIRECTIVE
Rule 14    declaration -> type_specifier_seq init_declarator_list SEMICOLON
Rule 15    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 16    init_declarator_list -> init_declarator
Rule 17    init_declarator -> declarator
Rule 18    init_declarator -> declarator ASSIGN initializer
Rule 19    declarator -> direct_declarator
Rule 20    declarator -> pointer direct_declarator
Rule 21    pointer -> TIMES
Rule 22    pointer -> TIMES pointer
Rule 23    direct_declarator -> IDENTIFIER
Rule 24    direct_declarator -> IDENTIFIER LBRACKET INT_CONST RBRACKET
Rule 25    direct_declarator -> IDENTIFIER LBRACKET IDENTIFIER RBRACKET
Rule 26    direct_declarator -> IDENTIFIER LBRACKET RBRACKET
Rule 27    initializer -> assignment_expression
Rule 28    struct_specifier -> STRUCT IDENTIFIER LBRACE struct_declaration_list RBRACE
Rule 29    struct_specifier -> STRUCT LBRACE struct_declaration_list RBRACE
Rule 30    struct_specifier -> STRUCT IDENTIFIER
Rule 31    struct_declaration_list -> struct_declaration_list struct_declaration
Rule 32    struct_declaration_list -> struct_declaration
Rule 33    struct_declaration -> type_specifier_seq init_declarator_list SEMICOLON
Rule 34    specifier_qualifier_list -> type_specifier_seq
Rule 35    specifier_qualifier_list -> type_specifier_seq specifier_qualifier_list
Rule 36    type_specifier_seq -> type_specifier_seq type_specifier
Rule 37    type_specifier_seq -> type_specifier
Rule 38    type_name -> type_specifier_seq
Rule 39    type_name -> type_specifier_seq pointer
Rule 40    type_specifier -> INT
Rule 41    type_specifier -> CHAR
Rule 42    type_specifier -> VOID
Rule 43    type_specifier -> FLOAT
Rule 44    type_specifier -> DOUBLE
Rule 45    type_specifier -> SHORT
Rule 46    type_specifier -> LONG
Rule 47    type_specifier -> SIGNED
Rule 48    type_specifier -> UNSIGNED
Rule 49    type_specifier -> BOOL
Rule 50    type_specifier -> CONST
Rule 51    type_specifier -> struct_specifier
Rule 52    type_specifier -> IDENTIFIER
Rule 53    function_definition -> type_specifier_seq IDENTIFIER LPAREN parameter_list RPAREN compound_statement
Rule 54    function_definition -> type_specifier_seq IDENTIFIER LPAREN RPAREN compound_statement
Rule 55    parameter_list -> parameter_list COMMA parameter_declaration
Rule 56    parameter_list -> parameter_declaration
Rule 57    parameter_declaration -> type_specifier_seq declarator
Rule 58    parameter_declaration -> type_specifier_seq
Rule 59    compound_statement -> LBRACE statement_list RBRACE
Rule 60    compound_statement -> LBRACE RBRACE
Rule 61    statement_list -> statement_list statement
Rule 62    statement_list -> statement
Rule 63    statement -> expression_statement
Rule 64    statement -> compound_statement
Rule 65    statement -> selection_statement
Rule 66    statement -> iteration_statement
Rule 67    statement -> jump_statement
Rule 68    statement -> declaration
Rule 69    statement -> labeled_statement
Rule 70    labeled_statement -> CASE constant_expression COLON statement
Rule 71    labeled_statement -> DEFAULT COLON statement
Rule 72    expression_statement -> expression SEMICOLON
Rule 73    expression_statement -> SEMICOLON
Rule 74    selection_statement -> IF LPAREN expression RPAREN statement
Rule 75    selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 76    selection_statement -> SWITCH LPAREN expression RPAREN statement
Rule 77    iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 78    iteration_statement -> FOR LPAREN expression_statement expression_statement expression RPAREN statement
Rule 79    iteration_statement -> FOR LPAREN declaration expression_statement expression RPAREN statement
Rule 80    iteration_statement -> FOR LPAREN expression_statement expression_statement RPAREN statement
Rule 81    iteration_statement -> FOR LPAREN declaration expression_statement RPAREN statement
Rule 82    jump_statement -> RETURN expression SEMICOLON
Rule 83    jump_statement -> RETURN SEMICOLON
Rule 84    jump_statement -> BREAK SEMICOLON
Rule 85    expression -> assignment_expression
Rule 86    expression -> expression COMMA assignment_expression
Rule 87    assignment_expression -> conditional_expression
Rule 88    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 89    assignment_operator -> ASSIGN
Rule 90    assignment_operator -> PLUS_ASSIGN
Rule 91    assignment_operator -> MINUS_ASSIGN
Rule 92    assignment_operator -> MUL_ASSIGN
Rule 93    assignment_operator -> DIV_ASSIGN
Rule 94    assignment_operator -> MOD_ASSIGN
Rule 95    assignment_operator -> LSHIFT_ASSIGN
Rule 96    assignment_operator -> RSHIFT_ASSIGN
Rule 97    constant_expression -> assignment_expression
Rule 98    logical_or_expression -> logical_or_expression OR logical_and_expression
Rule 99    logical_or_expression -> logical_and_expression
Rule 100   logical_and_expression -> logical_and_expression AND bitwise_or_expression
Rule 101   logical_and_expression -> bitwise_or_expression
Rule 102   bitwise_or_expression -> bitwise_or_expression BOR bitwise_xor_expression
Rule 103   bitwise_or_expression -> bitwise_xor_expression
Rule 104   bitwise_xor_expression -> bitwise_xor_expression BXOR bitwise_and_expression
Rule 105   bitwise_xor_expression -> bitwise_and_expression
Rule 106   bitwise_and_expression -> bitwise_and_expression BAND equality_expression
Rule 107   bitwise_and_expression -> equality_expression
Rule 108   equality_expression -> equality_expression EQ relational_expression
Rule 109   equality_expression -> equality_expression NEQ relational_expression
Rule 110   equality_expression -> relational_expression
Rule 111   relational_expression -> relational_expression LT shift_expression
Rule 112   relational_expression -> relational_expression GT shift_expression
Rule 113   relational_expression -> relational_expression LE shift_expression
Rule 114   relational_expression -> relational_expression GE shift_expression
Rule 115   relational_expression -> shift_expression
Rule 116   shift_expression -> shift_expression LSHIFT additive_expression
Rule 117   shift_expression -> shift_expression RSHIFT additive_expression
Rule 118   shift_expression -> additive_expression
Rule 119   additive_expression -> additive_expression PLUS multiplicative_expression
Rule 120   additive_expression -> additive_expression MINUS multiplicative_expression
Rule 121   additive_expression -> multiplicative_expression
Rule 122   multiplicative_expression -> multiplicative_expression TIMES unary_expression
Rule 123   multiplicative_expression -> multiplicative_expression DIVIDE unary_expression
Rule 124   multiplicative_expression -> multiplicative_expression MOD unary_expression
Rule 125   multiplicative_expression -> unary_expression
Rule 126   cast_expression -> LPAREN type_name RPAREN cast_expression
Rule 127   cast_expression -> postfix_expression
Rule 128   unary_expression -> postfix_expression
Rule 129   unary_expression -> PLUS unary_expression
Rule 130   unary_expression -> MINUS unary_expression
Rule 131   unary_expression -> NOT unary_expression
Rule 132   unary_expression -> BAND unary_expression
Rule 133   unary_expression -> SIZEOF LPAREN expression RPAREN
Rule 134   unary_expression -> SIZEOF LPAREN type_name RPAREN
Rule 135   unary_expression -> LPAREN type_name RPAREN unary_expression
Rule 136   conditional_expression -> logical_or_expression QUESTION expression COLON conditional_expression
Rule 137   conditional_expression -> logical_or_expression
Rule 138   postfix_expression -> primary_expression
Rule 139   postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 140   postfix_expression -> postfix_expression LPAREN argument_expression_list RPAREN
Rule 141   postfix_expression -> postfix_expression LPAREN RPAREN
Rule 142   postfix_expression -> postfix_expression DOT IDENTIFIER
Rule 143   postfix_expression -> postfix_expression ARROW IDENTIFIER
Rule 144   postfix_expression -> postfix_expression INC
Rule 145   postfix_expression -> postfix_expression DEC
Rule 146   primary_expression -> IDENTIFIER
Rule 147   primary_expression -> INT_CONST
Rule 148   primary_expression -> FLOAT_CONST
Rule 149   primary_expression -> STRING_LITERAL
Rule 150   primary_expression -> CHAR_CONST
Rule 151   primary_expression -> LPAREN expression RPAREN
Rule 152   argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 153   argument_expression_list -> assignment_expression

Terminals, with rules where they appear

ADDRESS              : 
AND                  : 100
ARROW                : 143
ASSIGN               : 18 89
ATOMIC               : 
AUTO                 : 
BAND                 : 106 132
BNOT                 : 
BOOL                 : 49
BOR                  : 102
BREAK                : 84
BXOR                 : 104
CASE                 : 70
CHAR                 : 41
CHAR_CONST           : 150
COLON                : 70 71 136
COMMA                : 15 55 86 152
COMPLEX              : 
CONST                : 50
CONTINUE             : 
DEC                  : 145
DEFAULT              : 71
DEREF                : 
DIVIDE               : 123
DIV_ASSIGN           : 93
DO                   : 
DOT                  : 12 142
DOUBLE               : 44
ELSE                 : 75
ENUM                 : 
EQ                   : 108
EXTERN               : 
FLOAT                : 43
FLOAT_CONST          : 148
FOR                  : 78 79 80 81
GE                   : 114
GENERIC              : 
GOTO                 : 
GT                   : 112
HASH                 : 
IDENTIFIER           : 11 12 12 23 24 25 25 26 28 30 52 53 54 142 143 146
IF                   : 74 75
IMAGINARY            : 
INC                  : 144
INLINE               : 
INT                  : 40
INT_CONST            : 24 147
LBRACE               : 28 29 59 60
LBRACKET             : 24 25 26 139
LE                   : 113
LONG                 : 46
LPAREN               : 53 54 74 75 76 77 78 79 80 81 126 133 134 135 140 141 151
LSHIFT               : 116
LSHIFT_ASSIGN        : 95
LT                   : 111
MINUS                : 120 130
MINUS_ASSIGN         : 91
MOD                  : 124
MOD_ASSIGN           : 94
MUL_ASSIGN           : 92
NEQ                  : 109
NOT                  : 131
OR                   : 98
PLUS                 : 119 129
PLUS_ASSIGN          : 90
PP_DIRECTIVE         : 8 13
QUESTION             : 136
RBRACE               : 28 29 59 60
RBRACKET             : 24 25 26 139
REGISTER             : 
RESTRICT             : 
RETURN               : 82 83
RPAREN               : 53 54 74 75 76 77 78 79 80 81 126 133 134 135 140 141 151
RSHIFT               : 117
RSHIFT_ASSIGN        : 96
SEMICOLON            : 14 33 72 73 82 83 84
SHORT                : 45
SIGNED               : 47
SIZEOF               : 133 134
STATIC               : 
STATIC_ASSERT        : 
STRING_LITERAL       : 149
STRUCT               : 28 29 30
SWITCH               : 76
THREAD_LOCAL         : 
TIMES                : 21 22 122
TYPEDEF              : 10
UNION                : 
UNSIGNED             : 48
VOID                 : 42
VOLATILE             : 
WHILE                : 77
error                : 

Nonterminals, with rules where they appear

additive_expression  : 116 117 118 119 120
argument_expression_list : 140 152
assignment_expression : 27 85 86 88 97 152 153
assignment_operator  : 88
bitwise_and_expression : 104 105 106
bitwise_or_expression : 100 101 102
bitwise_xor_expression : 102 103 104
cast_expression      : 126
compound_statement   : 53 54 64
conditional_expression : 87 136
constant_expression  : 70
declaration          : 6 10 68 79 81
declarator           : 17 18 57
direct_declarator    : 19 20
empty                : 
equality_expression  : 106 107 108 109
expression           : 72 74 75 76 77 78 79 82 86 133 136 139 151
expression_statement : 63 78 78 79 80 80 81
external_declaration : 3 4
external_list        : 1 3
function_definition  : 5
header_name          : 
include_directive    : 7
init_declarator      : 15 16
init_declarator_list : 14 15 33
initializer          : 18
iteration_statement  : 66
jump_statement       : 67
labeled_statement    : 69
logical_and_expression : 98 99 100
logical_or_expression : 98 136 137
multiplicative_expression : 119 120 121 122 123 124
parameter_declaration : 55 56
parameter_list       : 53 55
pointer              : 20 22 39
postfix_expression   : 127 128 139 140 141 142 143 144 145
primary_expression   : 138
program              : 0
relational_expression : 108 109 110 111 112 113 114
selection_statement  : 65
shift_expression     : 111 112 113 114 115 116 117
specifier_qualifier_list : 35
statement            : 61 62 70 71 74 75 75 76 77 78 79 80 81
statement_list       : 59 61
struct_declaration   : 31 32
struct_declaration_list : 28 29 31
struct_specifier     : 51
type_name            : 126 134 135
type_specifier       : 36 37
type_specifier_seq   : 14 33 34 35 36 38 39 53 54 57 58
typedef_declaration  : 9
unary_expression     : 88 122 123 124 125 129 130 131 132 135

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . external_list
    (3) external_list -> . external_list external_declaration
    (4) external_list -> . external_declaration
    (5) external_declaration -> . function_definition
    (6) external_declaration -> . declaration
    (7) external_declaration -> . include_directive
    (8) external_declaration -> . PP_DIRECTIVE
    (9) external_declaration -> . typedef_declaration
    (53) function_definition -> . type_specifier_seq IDENTIFIER LPAREN parameter_list RPAREN compound_statement
    (54) function_definition -> . type_specifier_seq IDENTIFIER LPAREN RPAREN compound_statement
    (14) declaration -> . type_specifier_seq init_declarator_list SEMICOLON
    (13) include_directive -> . PP_DIRECTIVE
    (10) typedef_declaration -> . TYPEDEF declaration
    (36) type_specifier_seq -> . type_specifier_seq type_specifier
    (37) type_specifier_seq -> . type_specifier
    (40) type_specifier -> . INT
    (41) type_specifier -> . CHAR
    (42) type_specifier -> . VOID
    (43) type_specifier -> . FLOAT
    (44) type_specifier -> . DOUBLE
    (45) type_specifier -> . SHORT
    (46) type_specifier -> . LONG
    (47) type_specifier -> . SIGNED
    (48) type_specifier -> . UNSIGNED
    (49) type_specifier -> . BOOL
    (50) type_specifier -> . CONST
    (51) type_specifier -> . struct_specifier
    (52) type_specifier -> . IDENTIFIER
    (28) struct_specifier -> . STRUCT IDENTIFIER LBRACE struct_declaration_list RBRACE
    (29) struct_specifier -> . STRUCT LBRACE struct_declaration_list RBRACE
    (30) struct_specifier -> . STRUCT IDENTIFIER

    PP_DIRECTIVE    shift and go to state 7
    TYPEDEF         shift and go to state 11
    INT             shift and go to state 13
    CHAR            shift and go to state 14
    VOID            shift and go to state 15
    FLOAT           shift and go to state 16
    DOUBLE          shift and go to state 17
    SHORT           shift and go to state 18
    LONG            shift and go to state 19
    SIGNED          shift and go to state 20
    UNSIGNED        shift and go to state 21
    BOOL            shift and go to state 22
    CONST           shift and go to state 23
    IDENTIFIER      shift and go to state 10
    STRUCT          shift and go to state 25

    program                        shift and go to state 1
    external_list                  shift and go to state 2
    external_declaration           shift and go to state 3
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    include_directive              shift and go to state 6
    typedef_declaration            shift and go to state 8
    type_specifier_seq             shift and go to state 9
    type_specifier                 shift and go to state 12
    struct_specifier               shift and go to state 24

state 1

    (0) S' -> program .



state 2

    (1) program -> external_list .
    (3) external_list -> external_list . external_declaration
    (5) external_declaration -> . function_definition
    (6) external_declaration -> . declaration
    (7) external_declaration -> . include_directive
    (8) external_declaration -> . PP_DIRECTIVE
    (9) external_declaration -> . typedef_declaration
    (53) function_definition -> . type_specifier_seq IDENTIFIER LPAREN parameter_list RPAREN compound_statement
    (54) function_definition -> . type_specifier_seq IDENTIFIER LPAREN RPAREN compound_statement
    (14) declaration -> . type_specifier_seq init_declarator_list SEMICOLON
    (13) include_directive -> . PP_DIRECTIVE
    (10) typedef_declaration -> . TYPEDEF declaration
    (36) type_specifier_seq -> . type_specifier_seq type_specifier
    (37) type_specifier_seq -> . type_specifier
    (40) type_specifier -> . INT
    (41) type_specifier -> . CHAR
    (42) type_specifier -> . VOID
    (43) type_specifier -> . FLOAT
    (44) type_specifier -> . DOUBLE
    (45) type_specifier -> . SHORT
    (46) type_specifier -> . LONG
    (47) type_specifier -> . SIGNED
    (48) type_specifier -> . UNSIGNED
    (49) type_specifier -> . BOOL
    (50) type_specifier -> . CONST
    (51) type_specifier -> . struct_specifier
    (52) type_specifier -> . IDENTIFIER
    (28) struct_specifier -> . STRUCT IDENTIFIER LBRACE struct_declaration_list RBRACE
    (29) struct_specifier -> . STRUCT LBRACE struct_declaration_list RBRACE
    (30) struct_specifier -> . STRUCT IDENTIFIER

    $end            reduce using rule 1 (program -> external_list .)
    PP_DIRECTIVE    shift and go to state 7
    TYPEDEF         shift and go to state 11
    INT             shift and go to state 13
    CHAR            shift and go to state 14
    VOID            shift and go to state 15
    FLOAT           shift and go to state 16
    DOUBLE          shift and go to state 17
    SHORT           shift and go to state 18
    LONG            shift and go to state 19
    SIGNED          shift and go to state 20
    UNSIGNED        shift and go to state 21
    BOOL            shift and go to state 22
    CONST           shift and go to state 23
    IDENTIFIER      shift and go to state 10
    STRUCT          shift and go to state 25

    external_declaration           shift and go to state 26
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    include_directive              shift and go to state 6
    typedef_declaration            shift and go to state 8
    type_specifier_seq             shift and go to state 9
    type_specifier                 shift and go to state 12
    struct_specifier               shift and go to state 24

state 3

    (4) external_list -> external_declaration .

    PP_DIRECTIVE    reduce using rule 4 (external_list -> external_declaration .)
    TYPEDEF         reduce using rule 4 (external_list -> external_declaration .)
    INT             reduce using rule 4 (external_list -> external_declaration .)
    CHAR            reduce using rule 4 (external_list -> external_declaration .)
    VOID            reduce using rule 4 (external_list -> external_declaration .)
    FLOAT           reduce using rule 4 (external_list -> external_declaration .)
    DOUBLE          reduce using rule 4 (external_list -> external_declaration .)
    SHORT           reduce using rule 4 (external_list -> external_declaration .)
    LONG            reduce using rule 4 (external_list -> external_declaration .)
    SIGNED          reduce using rule 4 (external_list -> external_declaration .)
    UNSIGNED        reduce using rule 4 (external_list -> external_declaration .)
    BOOL            reduce using rule 4 (external_list -> external_declaration .)
    CONST           reduce using rule 4 (external_list -> external_declaration .)
    IDENTIFIER      reduce using rule 4 (external_list -> external_declaration .)
    STRUCT          reduce using rule 4 (external_list -> external_declaration .)
    $end            reduce using rule 4 (external_list -> external_declaration .)


state 4

    (5) external_declaration -> function_definition .

    PP_DIRECTIVE    reduce using rule 5 (external_declaration -> function_definition .)
    TYPEDEF         reduce using rule 5 (external_declaration -> function_definition .)
    INT             reduce using rule 5 (external_declaration -> function_definition .)
    CHAR            reduce using rule 5 (external_declaration -> function_definition .)
    VOID            reduce using rule 5 (external_declaration -> function_definition .)
    FLOAT           reduce using rule 5 (external_declaration -> function_definition .)
    DOUBLE          reduce using rule 5 (external_declaration -> function_definition .)
    SHORT           reduce using rule 5 (external_declaration -> function_definition .)
    LONG            reduce using rule 5 (external_declaration -> function_definition .)
    SIGNED          reduce using rule 5 (external_declaration -> function_definition .)
    UNSIGNED        reduce using rule 5 (external_declaration -> function_definition .)
    BOOL            reduce using rule 5 (external_declaration -> function_definition .)
    CONST           reduce using rule 5 (external_declaration -> function_definition .)
    IDENTIFIER      reduce using rule 5 (external_declaration -> function_definition .)
    STRUCT          reduce using rule 5 (external_declaration -> function_definition .)
    $end            reduce using rule 5 (external_declaration -> function_definition .)


state 5

    (6) external_declaration -> declaration .

    PP_DIRECTIVE    reduce using rule 6 (external_declaration -> declaration .)
    TYPEDEF         reduce using rule 6 (external_declaration -> declaration .)
    INT             reduce using rule 6 (external_declaration -> declaration .)
    CHAR            reduce using rule 6 (external_declaration -> declaration .)
    VOID            reduce using rule 6 (external_declaration -> declaration .)
    FLOAT           reduce using rule 6 (external_declaration -> declaration .)
    DOUBLE          reduce using rule 6 (external_declaration -> declaration .)
    SHORT           reduce using rule 6 (external_declaration -> declaration .)
    LONG            reduce using rule 6 (external_declaration -> declaration .)
    SIGNED          reduce using rule 6 (external_declaration -> declaration .)
    UNSIGNED        reduce using rule 6 (external_declaration -> declaration .)
    BOOL            reduce using rule 6 (external_declaration -> declaration .)
    CONST           reduce using rule 6 (external_declaration -> declaration .)
    IDENTIFIER      reduce using rule 6 (external_declaration -> declaration .)
    STRUCT          reduce using rule 6 (external_declaration -> declaration .)
    $end            reduce using rule 6 (external_declaration -> declaration .)


state 6

    (7) external_declaration -> include_directive .

    PP_DIRECTIVE    reduce using rule 7 (external_declaration -> include_directive .)
    TYPEDEF         reduce using rule 7 (external_declaration -> include_directive .)
    INT             reduce using rule 7 (external_declaration -> include_directive .)
    CHAR            reduce using rule 7 (external_declaration -> include_directive .)
    VOID            reduce using rule 7 (external_declaration -> include_directive .)
    FLOAT           reduce using rule 7 (external_declaration -> include_directive .)
    DOUBLE          reduce using rule 7 (external_declaration -> include_directive .)
    SHORT           reduce using rule 7 (external_declaration -> include_directive .)
    LONG            reduce using rule 7 (external_declaration -> include_directive .)
    SIGNED          reduce using rule 7 (external_declaration -> include_directive .)
    UNSIGNED        reduce using rule 7 (external_declaration -> include_directive .)
    BOOL            reduce using rule 7 (external_declaration -> include_directive .)
    CONST           reduce using rule 7 (external_declaration -> include_directive .)
    IDENTIFIER      reduce using rule 7 (external_declaration -> include_directive .)
    STRUCT          reduce using rule 7 (external_declaration -> include_directive .)
    $end            reduce using rule 7 (external_declaration -> include_directive .)


state 7

    (8) external_declaration -> PP_DIRECTIVE .
    (13) include_directive -> PP_DIRECTIVE .

  ! reduce/reduce conflict for PP_DIRECTIVE resolved using rule 8 (external_declaration -> PP_DIRECTIVE .)
  ! reduce/reduce conflict for TYPEDEF resolved using rule 8 (external_declaration -> PP_DIRECTIVE .)
  ! reduce/reduce conflict for INT resolved using rule 8 (external_declaration -> PP_DIRECTIVE .)
  ! reduce/reduce conflict for CHAR resolved using rule 8 (external_declaration -> PP_DIRECTIVE .)
  ! reduce/reduce conflict for VOID resolved using rule 8 (external_declaration -> PP_DIRECTIVE .)
  ! reduce/reduce conflict for FLOAT resolved using rule 8 (external_declaration -> PP_DIRECTIVE .)
  ! reduce/reduce conflict for DOUBLE resolved using rule 8 (external_declaration -> PP_DIRECTIVE .)
  ! reduce/reduce conflict for SHORT resolved using rule 8 (external_declaration -> PP_DIRECTIVE .)
  ! reduce/reduce conflict for LONG resolved using rule 8 (external_declaration -> PP_DIRECTIVE .)
  ! reduce/reduce conflict for SIGNED resolved using rule 8 (external_declaration -> PP_DIRECTIVE .)
  ! reduce/reduce conflict for UNSIGNED resolved using rule 8 (external_declaration -> PP_DIRECTIVE .)
  ! reduce/reduce conflict for BOOL resolved using rule 8 (external_declaration -> PP_DIRECTIVE .)
  ! reduce/reduce conflict for CONST resolved using rule 8 (external_declaration -> PP_DIRECTIVE .)
  ! reduce/reduce conflict for IDENTIFIER resolved using rule 8 (external_declaration -> PP_DIRECTIVE .)
  ! reduce/reduce conflict for STRUCT resolved using rule 8 (external_declaration -> PP_DIRECTIVE .)
  ! reduce/reduce conflict for $end resolved using rule 8 (external_declaration -> PP_DIRECTIVE .)
    PP_DIRECTIVE    reduce using rule 8 (external_declaration -> PP_DIRECTIVE .)
    TYPEDEF         reduce using rule 8 (external_declaration -> PP_DIRECTIVE .)
    INT             reduce using rule 8 (external_declaration -> PP_DIRECTIVE .)
    CHAR            reduce using rule 8 (external_declaration -> PP_DIRECTIVE .)
    VOID            reduce using rule 8 (external_declaration -> PP_DIRECTIVE .)
    FLOAT           reduce using rule 8 (external_declaration -> PP_DIRECTIVE .)
    DOUBLE          reduce using rule 8 (external_declaration -> PP_DIRECTIVE .)
    SHORT           reduce using rule 8 (external_declaration -> PP_DIRECTIVE .)
    LONG            reduce using rule 8 (external_declaration -> PP_DIRECTIVE .)
    SIGNED          reduce using rule 8 (external_declaration -> PP_DIRECTIVE .)
    UNSIGNED        reduce using rule 8 (external_declaration -> PP_DIRECTIVE .)
    BOOL            reduce using rule 8 (external_declaration -> PP_DIRECTIVE .)
    CONST           reduce using rule 8 (external_declaration -> PP_DIRECTIVE .)
    IDENTIFIER      reduce using rule 8 (external_declaration -> PP_DIRECTIVE .)
    STRUCT          reduce using rule 8 (external_declaration -> PP_DIRECTIVE .)
    $end            reduce using rule 8 (external_declaration -> PP_DIRECTIVE .)

  ! PP_DIRECTIVE    [ reduce using rule 13 (include_directive -> PP_DIRECTIVE .) ]
  ! TYPEDEF         [ reduce using rule 13 (include_directive -> PP_DIRECTIVE .) ]
  ! INT             [ reduce using rule 13 (include_directive -> PP_DIRECTIVE .) ]
  ! CHAR            [ reduce using rule 13 (include_directive -> PP_DIRECTIVE .) ]
  ! VOID            [ reduce using rule 13 (include_directive -> PP_DIRECTIVE .) ]
  ! FLOAT           [ reduce using rule 13 (include_directive -> PP_DIRECTIVE .) ]
  ! DOUBLE          [ reduce using rule 13 (include_directive -> PP_DIRECTIVE .) ]
  ! SHORT           [ reduce using rule 13 (include_directive -> PP_DIRECTIVE .) ]
  ! LONG            [ reduce using rule 13 (include_directive -> PP_DIRECTIVE .) ]
  ! SIGNED          [ reduce using rule 13 (include_directive -> PP_DIRECTIVE .) ]
  ! UNSIGNED        [ reduce using rule 13 (include_directive -> PP_DIRECTIVE .) ]
  ! BOOL            [ reduce using rule 13 (include_directive -> PP_DIRECTIVE .) ]
  ! CONST           [ reduce using rule 13 (include_directive -> PP_DIRECTIVE .) ]
  ! IDENTIFIER      [ reduce using rule 13 (include_directive -> PP_DIRECTIVE .) ]
  ! STRUCT          [ reduce using rule 13 (include_directive -> PP_DIRECTIVE .) ]
  ! $end            [ reduce using rule 13 (include_directive -> PP_DIRECTIVE .) ]


state 8

    (9) external_declaration -> typedef_declaration .

    PP_DIRECTIVE    reduce using rule 9 (external_declaration -> typedef_declaration .)
    TYPEDEF         reduce using rule 9 (external_declaration -> typedef_declaration .)
    INT             reduce using rule 9 (external_declaration -> typedef_declaration .)
    CHAR            reduce using rule 9 (external_declaration -> typedef_declaration .)
    VOID            reduce using rule 9 (external_declaration -> typedef_declaration .)
    FLOAT           reduce using rule 9 (external_declaration -> typedef_declaration .)
    DOUBLE          reduce using rule 9 (external_declaration -> typedef_declaration .)
    SHORT           reduce using rule 9 (external_declaration -> typedef_declaration .)
    LONG            reduce using rule 9 (external_declaration -> typedef_declaration .)
    SIGNED          reduce using rule 9 (external_declaration -> typedef_declaration .)
    UNSIGNED        reduce using rule 9 (external_declaration -> typedef_declaration .)
    BOOL            reduce using rule 9 (external_declaration -> typedef_declaration .)
    CONST           reduce using rule 9 (external_declaration -> typedef_declaration .)
    IDENTIFIER      reduce using rule 9 (external_declaration -> typedef_declaration .)
    STRUCT          reduce using rule 9 (external_declaration -> typedef_declaration .)
    $end            reduce using rule 9 (external_declaration -> typedef_declaration .)


state 9

    (53) function_definition -> type_specifier_seq . IDENTIFIER LPAREN parameter_list RPAREN compound_statement
    (54) function_definition -> type_specifier_seq . IDENTIFIER LPAREN RPAREN compound_statement
    (14) declaration -> type_specifier_seq . init_declarator_list SEMICOLON
    (36) type_specifier_seq -> type_specifier_seq . type_specifier
    (15) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (16) init_declarator_list -> . init_declarator
    (40) type_specifier -> . INT
    (41) type_specifier -> . CHAR
    (42) type_specifier -> . VOID
    (43) type_specifier -> . FLOAT
    (44) type_specifier -> . DOUBLE
    (45) type_specifier -> . SHORT
    (46) type_specifier -> . LONG
    (47) type_specifier -> . SIGNED
    (48) type_specifier -> . UNSIGNED
    (49) type_specifier -> . BOOL
    (50) type_specifier -> . CONST
    (51) type_specifier -> . struct_specifier
    (52) type_specifier -> . IDENTIFIER
    (17) init_declarator -> . declarator
    (18) init_declarator -> . declarator ASSIGN initializer
    (28) struct_specifier -> . STRUCT IDENTIFIER LBRACE struct_declaration_list RBRACE
    (29) struct_specifier -> . STRUCT LBRACE struct_declaration_list RBRACE
    (30) struct_specifier -> . STRUCT IDENTIFIER
    (19) declarator -> . direct_declarator
    (20) declarator -> . pointer direct_declarator
    (23) direct_declarator -> . IDENTIFIER
    (24) direct_declarator -> . IDENTIFIER LBRACKET INT_CONST RBRACKET
    (25) direct_declarator -> . IDENTIFIER LBRACKET IDENTIFIER RBRACKET
    (26) direct_declarator -> . IDENTIFIER LBRACKET RBRACKET
    (21) pointer -> . TIMES
    (22) pointer -> . TIMES pointer

    IDENTIFIER      shift and go to state 27
    INT             shift and go to state 13
    CHAR            shift and go to state 14
    VOID            shift and go to state 15
    FLOAT           shift and go to state 16
    DOUBLE          shift and go to state 17
    SHORT           shift and go to state 18
    LONG            shift and go to state 19
    SIGNED          shift and go to state 20
    UNSIGNED        shift and go to state 21
    BOOL            shift and go to state 22
    CONST           shift and go to state 23
    STRUCT          shift and go to state 25
    TIMES           shift and go to state 34

    init_declarator_list           shift and go to state 28
    type_specifier                 shift and go to state 29
    init_declarator                shift and go to state 30
    struct_specifier               shift and go to state 24
    declarator                     shift and go to state 31
    direct_declarator              shift and go to state 32
    pointer                        shift and go to state 33

state 10

    (52) type_specifier -> IDENTIFIER .

    IDENTIFIER      reduce using rule 52 (type_specifier -> IDENTIFIER .)
    INT             reduce using rule 52 (type_specifier -> IDENTIFIER .)
    CHAR            reduce using rule 52 (type_specifier -> IDENTIFIER .)
    VOID            reduce using rule 52 (type_specifier -> IDENTIFIER .)
    FLOAT           reduce using rule 52 (type_specifier -> IDENTIFIER .)
    DOUBLE          reduce using rule 52 (type_specifier -> IDENTIFIER .)
    SHORT           reduce using rule 52 (type_specifier -> IDENTIFIER .)
    LONG            reduce using rule 52 (type_specifier -> IDENTIFIER .)
